--- a/config.json
+++ b/config.json
@@ -1,10 +1,12 @@
 [
 	{
-		"these-types-of-files": "mp4, 3pg, mov, avi, mpg",
-		"go-here": "[Video]/YYYY/MM-MMMM"
+		"from": "import",
+		"types": "mp4, 3pg, mov, avi, mpg",
+		"to": "[Video]/YYYY/MM-MMMM"
 	},
     {
-		"these-types-of-files": "jpg, png, jpeg, gif",
-		"go-here": "[Pictures]/YYYY/MM-MMMM"
+    	"from": "import",
+		"types": "jpg, png, jpeg, gif",
+		"to": "[Pictures]/YYYY/MM-MMMM"
 	}
 ]
