--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "moment": "^2.7.0",
     "underscore": "^1.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine-node": "^1.14.5"
+  },
   "scripts": {
-    "test": "npm test"
+    "test": "export mode=\"TEST\" && node_modules/jasmine-node/bin/jasmine-node tests --forceexit"
   },
   "repository": {
     "type": "git",
