--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 [
 	{
-		"from": "import",
-		"types": "mp4, 3pg, mov, avi, mpg",
+		"from": "/Volumes/bozzldrive/Import",
+		"types": "mp4,3pg,mov,avi,mpg",
 		"to": "[Video]/YYYY/MM-MMMM"
 	},
     {
-    	"from": "import",
-		"types": "jpg, png, jpeg, gif",
+    	"from": "/Volumes/bozzldrive/Import",
+		"types": "jpg,png,jpeg,gif",
 		"to": "[Pictures]/YYYY/MM-MMMM"
 	}
 ]
