--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "organize.js",
   "dependencies": {
     "moment": "^2.7.0",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "exif": "^0.4.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5"
