--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jasmine-node": "^1.14.5"
   },
   "scripts": {
-    "test": "export mode=\"TEST\" && node_modules/jasmine-node/bin/jasmine-node tests --forceexit"
+    "test": "export mode=\"TEST\" && cd tests && ../node_modules/jasmine-node/bin/jasmine-node . --forceexit"
   },
   "repository": {
     "type": "git",
