--- a/config.json
+++ b/config.json
@@ -2,14 +2,9 @@
     {
     	"from": "/Volumes/bozzldrive/Import",
 		"types": "jpg,png,jpeg,gif",
-		"to": "[/Volumes/bozzldrive/Pictures]/YYYY/MM/DD",
-		"recursive": false,
+		"to": "[/Volumes/bozzldrive]/YYYY/MM/DD",
+		"recursive": true,
 		"copy": false,
-		"dryrun": false
-	},
-	{
-		"from": "/Volumes/bozzldrive/Import",
-		"types": "mp4,3gp,mov,avi,mpg",
-		"to": "[Video]/YYYY/MM/DD"
+		"dryrun": true
 	}
 ]
