added better logic for getting a files creation date

--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
-{
-	"from": "/Volumes/bozzldrive/Importx",
-	"types": "jpg,png,jpeg,gif,vob,mp4,mov",
-	"to": "[/Volumes/bozzldrive]/YYYY/MM/DD",
-	"recursive": true,
-	"move": true,
-	"dryrun": false
-}
+[
+    {
+    	"from": "/Volumes/bozzldrive/Import",
+		"types": "jpg,png,jpeg,gif",
+		"to": "[/Volumes/bozzldrive]/YYYY/MM/DD",
+		"recursive": false,
+		"move": true,
+		"dryrun": false
+	}
+]
